# OpenCrypto

./: .clang-format  CMakeLists.txt  main.cpp
include/libcryptocxx/: block.h
include/opencrypto/: block.h  constants.h
src/: block.cxx
